# MeepPublic

./: .gitignore  README.md  docker-compose.yml
interfaces/discord/: Dockerfile  pyproject.toml
interfaces/discord/src/: backup.json  embeds.py  main.py  voice.py
interfaces/streamlit/: pyproject.toml
interfaces/streamlit/src/: main.py
meep/: pyproject.toml
meep/src/: .langchain-ignore  constants.py  langgraph.json  test.py
meep/src/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
meep/src/data/: jsondb.py
meep/src/data/databases/: url_cache.json
meep/src/data/databases/chroma_seiso/: chroma.sqlite3
meep/src/data/databases/long_term_memory/: memory.json
meep/src/graphs/: _agents.py  _data.py  _formatting.py  _llm.py  _mcp.py
meep/src/graphs/agents/: meep.py
meep/src/graphs/processes/: agentic_conversation.py  knowledge.py  select_activity.py  summarize.py  vision.py
meep/src/locallibs/langrouf/: __init__.py  graph.py
meep/src/locallibs/rouftools/: __init__.py  kit.py  tool.py  utils.py
meep/src/mcp/: debug.py  environ.py  memory.py  seiso.py  timer.py  vertex_generate_image.py  vision.py
meep/src/module_dev/: soundcloudtest.py
