[project]
name = "meepgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "chromadb>=1.0.12",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.18",
    "langgraph",
    "langgraph-cli[inmem]>=0.2.10",
    "vertexai>=1.71.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "filelock>=3.18.0",
    "yt-dlp>=2025.8.11",
    "langchain-google-genai>=2.1.6",
]